# public-for-gemini

./: README.md
drive-project-main/: CMakeLists.txt  Dockerfile.app  Dockerfile.cppclient  Dockerfile.cppclienttests  Dockerfile.inputtests  Dockerfile.pyclient  Dockerfile.server  Dockerfile.tests  README.md  details.txt  docker-compose.yml
drive-project-main/src/client/: CppClient.cpp  CppClient.h  CppClientMain.cpp  PythonClient.py
drive-project-main/src/commands/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  SearchCommand.cpp  SearchCommand.h
drive-project-main/src/compression/: Compressor.cpp  Compressor.h
drive-project-main/src/core/: CLIMenu.cpp  IMenu.h  SocketMenu.cpp  SocketMenu.h  app.cpp  main.cpp
drive-project-main/src/input/: AddInput.cpp  AddInput.h  DeleteInput.cpp  DeleteInput.h  GetInput.cpp  GetInput.h  ICInput.h  InputManager.cpp  InputManager.h  SearchInput.cpp  SearchInput.h
drive-project-main/src/server/: ClientHandler.cpp  ClientHandler.h  ClientInfo.h  IClientDispatcher.h  ThreadPerClientDispatcher.cpp  ThreadPerClientDispatcher.h  main.cpp  tcp_server.cpp  tcp_server.h
drive-project-main/src/storage/: ConstStorageDispatcher.cpp  IStorageDispatcher.h  constStorageDispatcher.h  storageManager.cpp  storageManager.h
drive-project-main/tests/: AddCommandTests.cpp  ClientHandlerTests.cpp  CompressorTests.cpp  ConstSmDispatcherTests.cpp  DeleteCommandTests.cpp  GetCommandTests.cpp  SearchCommandTests.cpp  SocketMenuTests.cpp  StorageManagerTests.cpp  ThreadPerClientTests.cpp
drive-project-main/tests/client/: CppClientTests.cpp
drive-project-main/tests/input/: AddInputTests.cpp  DeleteInputTests.cpp  GetInputTests.cpp  InputManagerTests.cpp  SearchInputTests.cpp
